Domain delete function added

--- a/AWS_Website/www_static/account.html
+++ b/AWS_Website/www_static/account.html
@@ -57,6 +57,7 @@
 						<input type="text" name="domainNewName" id="domainNewName" size="30" maxlength="30" value="<%= userData.domain %>"/>
 						<div id="domainNewNameRes"></div>
 						<input type="button" id="renameDomainButton" value="Set domain name" disabled>
+						<input type="button" id="deleteDomainButton" value="Delete domain" disabled>
 					</div>
 					</td>
 					</tr>
