--- a/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
+++ b/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
@@ -31,7 +31,7 @@
             <div id="URLBox">prezera.com/<input type="text" id="URLSlides" value="EnterCodeHere"></div>
             <div id="currentSlide" onclick="void(0)" style="height: 65%; width: 80%; display: inline-block;">
                 <div id="overlay"></div>
-                <iframe id="theIframe" class="frame" src="http://www.slite.loc/01ba" seamless></iframe>
+                <iframe id="theIframe" class="frame" src="https://www.prezera.com/EnterCodeHere" seamless></iframe>
             </div>
         </div>
 
