--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -211,7 +211,7 @@
 	<!-- <div id="videochatpanel"></div> -->
 	<div id="videochat">
 		<span class="closeLiveVideo"><div class="closevideo" id="closevideo"></div></span>
-		<iframe width="100%" height="100%" id="videoframe" scrolling="no"></iframe>
+		<iframe width="100%" height="100%" id="videoframe" scrolling="auto"></iframe>
 	</div>
 
 	<div class="startTemporaryPopup" id="videoChatExplanator">&#8592; click grey bar to open Video Chat</div>
