Updated about product and about company

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -164,8 +164,9 @@
         <div class="content">
             <header id="aboutOurProduct">
                 <h3>About Our Product</h3>
-                <p>Slite&#8482; is a new way of showcasing what was called the&ldquo;PowerPoint Presentation&rdquo; of the 20th century.</p>
-                <p>Slite&#8482; is a combination of PowerPoint, Skype, and Facebook. While you are showing your presentation, you are able to text chat, video chat, poll your audience live, and have a cool iPhone/Android application to control your presentation. Moreover, your presentations will now be live on the web, so you will never forget them or lose them. And the coolest thing? There is no installation or registration required! Use it for free!</p>
+				<br>
+                <p>PREZERA.COM&#8482; - live online presentations.</p>
+                <p>PREZERA.COM&#8482; enables you to present from inside your browser to a remote and in-house audiences. It comes with an iPhone remote control app. PREZERA.COM&#8482; adds a social component inside your presentation allowing audience to connect with each other and presenter. Desktop sharing and video broadcasting make your presentation efficient. PREZERA.COM&#8482; is <b>the</b> best and the simpliest way in the world to explain information from one person to many.</p>
             </header>
         </div>
         <a href="#two" class="goto-next scrolly">Next</a>
@@ -215,10 +216,11 @@
                 <h2>About our company</h2>
             </header>
             <p>
-                We are young company based in Mountain View - a city in the heart of Silicon Valley, California.
-                It took 2 PhDs and 75 years of experience to design and make this product for you guys.
+                PREZERA.COM&#8482; is a company based in Mountain View - a city in the heart of Silicon Valley, California.
+                It took 2 PhDs and 75 years of experience to design and make the most efficient to tool for presentations up to date.
                 Our goal is to make your life easier, make presentations less boring and more fun (while increasing your productivity).
-                We embrace latest, coolest technologies and let you play with them in our product while making sure your 80 year grandmother is able to use our product too.
+                We embrace latest, coolest technologies and let you use them in our product while making sure your 80 year grandmother is able to use our product too.
+				Have fun with PREZERA.COM&#8482;, and if you have any questions before, during or after your presentation, email us at help@prezera.com, and we'll be there for you.
             </p>
         </div>
         <a href="#four" class="goto-next scrolly">Next</a>
