--- a/AWS_Website/www_static/A1/webrtc/video-client.html
+++ b/AWS_Website/www_static/A1/webrtc/video-client.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<script src="https://cdn.webrtc-experiment.com/RTCMultiConnection.js"></script>
-<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//cdn.webrtc-experiment.com/RTCMultiConnection.js"></script>
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <style>
 video {
@@ -12,7 +12,7 @@ video {
 <script>
 // DUPLICATE SOCKET
 var socketWebrtc = io.connect(document.location.hostname + ':' + location.port);
-var participants;
+var participants = new RTCMultiConnection('slite-video');
 
 socketWebrtc.on('sharing-client', function (data) {
 	startSession(data.moderatorId, data.chatMode);
@@ -23,26 +23,26 @@ socketWebrtc.on('sharing-client', function (data) {
 		var MODERATOR_SESSION = {};
 		
 		if(chatMode == 1) {
-			MODERATOR_SESSION    = {         // media-type
-				oneway: true
-			};		
+			MODERATOR_SESSION    = {         
+			};
 		}
 		else if(chatMode == 2) {
-			MODERATOR_SESSION    = {         // media-type
+			MODERATOR_SESSION    = {        
 				video: true,
 				audio: true
-			};				
+			};			
 		}
-				
-		var MODERATOR_EXTRA      = {};       // empty extra-data
+		
+		participants.join(	{	
+				sessionid: MODERATOR_SESSION_ID,
+				userid:    MODERATOR_ID,
+				session:   MODERATOR_SESSION
+			}
+		);
 
-		participants = new RTCMultiConnection(MODERATOR_CHANNEL_ID);
-		participants.join({
-			sessionid: MODERATOR_SESSION_ID,
-			userid:    MODERATOR_ID,
-			extra:     MODERATOR_EXTRA,
-			session:   MODERATOR_SESSION
-		});
+		/*participants.onNewSession = function(session) {
+			alert(session);
+		}*/
 		
 		participants.onstream = function(event) {
 			if(event.isVideo) {
@@ -53,7 +53,6 @@ socketWebrtc.on('sharing-client', function (data) {
 					$( "#videosharingR" ).append(event.mediaElement);		
 				}
 			}
-			
 			if (event.isAudio) {
 				$( "#audiosharing" ).append(event.mediaElement);
 			}
