VideoConf fixes + A1.js

--- a/AWS_Website/www_static/A1/webrtc/video-client.html
+++ b/AWS_Website/www_static/A1/webrtc/video-client.html
@@ -34,6 +34,7 @@ socketWebrtc.on('sharing-client', function (data) {
 			};
 		}
 		else if(chatMode == 2) {
+			$( "#videosharing" ).addClass( "videoL" );
 			MODERATOR_SESSION    = {        
 				video: true,
 				audio: true
