--- a/AWS_Website/www_static/A1/webrtc/video-presenter.html
+++ b/AWS_Website/www_static/A1/webrtc/video-presenter.html
@@ -1,8 +1,7 @@
 <html>
 <head>
-<script src="//cdn.webrtc-experiment.com/RTCMultiConnection.js"></script>
+<script src="/A1/js/RTCMultiConnection.js"></script>
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-<script src="//cdn.webrtc-experiment.com/video-conferencing/conference.js"> </script>
 <script src="/socket.io/socket.io.js"></script>
 <style>
 video {
@@ -16,7 +15,7 @@ video {
 	position: absolute;
 	width: 100px;
 	right: 20px;
-	border: 1px solid #3F7FBF; 
+	border: 1px solid #3F7FBF;
 	display: block;
 }
 </style>
