Disabled arrows in remote, prev and next controlled by keyboard keys

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -253,7 +253,8 @@
 	<div class="navButton navButtonPrev" id="navPrev">&#x2039;</div>
 	<div class="navButton navButtonNext" id="navNext">&#x203a;</div>
 
-    <script class="rs-file" src="../js/jquery.royalslider.min.js"></script>
+    <!--<script class="rs-file" src="../js/jquery.royalslider.min.js"></script>-->
+    <<script class="rs-file" src="../js/jquery.royalslider.js"></script>
     <script src="../js/jquery.infinitescroll.js"></script>
 
     <!-- VideoChat Javascript -->
