[refactor] upload button

--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -136,10 +136,10 @@
             <input type="file" accept="pptx" id="uploadPresentation">
         </div>
   <% } else { %>
-    <div class="uploadfile">
+    <!-- <div class="uploadfile">
             <div type="button" class="uploadButton" onclick="javascript:document.location='my.html'">Limit reached.<br/>Click here to delete.</div>
       <input type="file" accept="pptx" id="uploadPresentation" style="display: none">   
-        </div>
+        </div> -->
   <% } %>
   <%- randomSlides %>
  
