--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -265,10 +265,10 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="new_template/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- Custom CSS -->
     <link href="new_template/css/stylish-portfolio.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
 
     <!-- Custom Fonts -->
     <link href="new_template/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -289,7 +289,7 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li><a href="#banner" data-index="one" class="menuLink">Upload</a></li>
+            <li><a href="#top" data-index="one" class="menuLink">Upload</a></li>
         <li><a href="#one" data-index="one" class="menuLink">Product</a></li>
                 <li><a href="#two" data-index="two" class="menuLink">How it works</a></li>
                 <li><a href="#three" data-index="three" class="menuLink">Company</a></li>
@@ -312,8 +312,9 @@
     </nav>
 
     <!-- Header -->
-    <header id="banner" class="header">
+    <header id="top" class="header">
         <div class="text-vertical-center">
+            <h1>Prezera</h1>
 
             <% if(noUploadForUser == 0) { %>
                 <div class="uploadfile">
@@ -451,32 +452,51 @@
     </section>
 
     <!-- Footer -->
+
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
-                    </h4>
-                    <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
-                        </li>
-                    </ul>
+                    <div class="col-lg-5">
+                        <h4><strong>Business inquiries</strong></h4>
+                        <ul class="list-unstyled">
+                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:partners@prezera.com">partners@prezera.com</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-5">
+                        <h4><strong>Press</strong></h4>
+                        <ul class="list-unstyled">
+                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:press@prezera.com">press@prezera.com</a>
+                            </li>
+                        </ul>
+                    </div>
+
+
                     <br>
                     <ul class="list-inline">
-                        <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                        </li>
                         <li>
                             <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-envelope fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
+                   
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="text-muted">© Prezera™. All rights reserved.</p>
                 </div>
             </div>
         </div>
