[refactor] Comment out slides, update layout

--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -88,7 +88,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2> Example Slides </h2>
-                      <%- randomSlides %>
+                      <!-- <%- randomSlides %> -->
+                      SLIDES WILL GO HERE, THEY NEED CSS STYLING TO BE DISPLAYED CORRECTLY
                 </div>
             </div>
             <!-- /.row -->
@@ -105,11 +106,14 @@
                     <h2>About Our Product</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
+                        <div class="col-sm-12">
+                            <div class="col-sm-6 product">
+
+                            </div>
+                            <div class="col-sm-offset-1 col-sm-5 service-item text-left">
                             </span>
-                                <h4>
-                                    <strong>Service Name</strong>
+                                <h4 class="text-center">
+                                    <strong>PREZERA.COM™ - live online presentations.</strong>
                                 </h4>
                                 <p>PREZERA.COM™ enables you to present from inside your browser to a remote and in-house audiences. It comes with an iPhone remote control app. PREZERA.COM™ adds a social component inside your presentation allowing audience to connect with each other and presenter. Desktop sharing and video broadcasting make your presentation efficient. PREZERA.COM™ is the best and the simpliest way in the world to explain information from one person to many.</p>
                             </div>
@@ -184,9 +188,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+                    <h2>About our company</h2><br>
+                    <p>PREZERA.COM™ is a company based in Mountain View - a city in the heart of Silicon Valley, California. It took 2 PhDs and 75 years of experience to design and make the most efficient to tool for presentations up to date. Our goal is to make your life easier, make presentations less boring and more fun (while increasing your productivity). We embrace latest, coolest technologies and let you use them in our product while making sure your 80 year grandmother is able to use our product too. Have fun with PREZERA.COM™, and if you have any questions before, during or after your presentation, email us at help@prezera.com, and we'll be there for you.</p>
                 </div>
             </div>
         </div>
