--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -31,9 +31,29 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+
+    <!-- jQuery -->
+    <script src="new_template/js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="new_template/js/bootstrap.min.js"></script>
+	
+    <script src="js/client.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/main.js"></script>
 </head>
 
 <body>
+
+    <div id="upload_presentation" class="uploadDialog">
+        <div>
+            <a href="#closeUpload" title="Close" class="closeUpload">X</a>
+            <h3 id="uploadLabel">Uploading presentation...</h3>
+            <div id="progressbar"></div>
+        </div>
+    </div>
+
 
     <!-- Navigation -->
     <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
@@ -88,26 +108,6 @@
             <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
         </div>
     </header>
-
-    <!-- RANDOM SLIDES -->
-    <section id="about" class="about whiteBg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2> Example Slides </h2>
-                      <!-- <%- randomSlides %> -->
-                      SLIDES WILL GO HERE, THEY NEED CSS STYLING TO BE DISPLAYED CORRECTLY
-
-                      sdfsdf
-                      sdf
-                      sd
-                      fsd
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
 
     <!-- Our Product -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
@@ -268,11 +268,6 @@
     </section>
     </footer>
 
-    <!-- jQuery -->
-    <script src="new_template/js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="new_template/js/bootstrap.min.js"></script>
 
 
     <!-- Custom Theme JavaScript -->
