--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -34,6 +34,13 @@
 </head>
 
 <body>
+    <div id="upload_presentation" class="uploadDialog">
+        <div>
+            <a href="#closeUpload" title="Close" class="closeUpload">X</a>
+            <h3 id="uploadLabel">Uploading presentation...</h3>
+            <div id="progressbar"></div>
+        </div>
+    </div>
 
     <!-- Navigation -->
     <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
@@ -95,13 +102,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2> Example Slides </h2>
-                      <!-- <%- randomSlides %> -->
                       SLIDES WILL GO HERE, THEY NEED CSS STYLING TO BE DISPLAYED CORRECTLY
-
-                      sdfsdf
-                      sdf
-                      sd
-                      fsd
                 </div>
             </div>
             <!-- /.row -->
@@ -194,20 +195,16 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About our company</h2><br>
-                    <p>PREZERA.COM™ is a company based in Mountain View - a city in the heart of Silicon Valley, California. It took 2 PhDs and 75 years of experience to design and make the most efficient to tool for presentations up to date. Our goal is to make your life easier, make presentations less boring and more fun (while increasing your productivity). We embrace latest, coolest technologies and let you use them in our product while making sure your 80 year grandmother is able to use our product too. Have fun with PREZERA.COM™, and if you have any questions before, during or after your presentation, email us at help@prezera.com, and we'll be there for you.</p>
-                </div><br>
+                    <p>PREZERA.COM™ is a company based in Mountain View - a city in the heart of Silicon Valley, California. It took 2 PhDs and 75 years of experience to design and make the most efficient to tool for presentations up to date. Our goal is to make your life easier, make presentations less boring and more fun (while increasing your productivity). We embrace latest, coolest technologies and let you use them in our product while making sure your 80 year grandmother is able to use our product too. Have fun with PREZERA.COM™, and if you have any questions before, during or after your presentation, email us at help@prezera.com, and we'll be there for you.</p><br>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Map -->
-    <!-- <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-        <br />
-        <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-        </small>
-        </iframe>
+    <!-- Login -->
+  <!--   <section id="login" >
+        
+       
     </section> -->
 
     <!-- Footer -->
@@ -276,6 +273,9 @@
 
 
     <!-- Custom Theme JavaScript -->
+    <script src="js/main.js"></script>
+    <script src="js/client.min.js"></script>
+
     <script>
     // Closes the sidebar menu
     $("#menu-close").click(function(e) {
