--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -75,13 +75,25 @@
     </nav>
 
     <!-- Upload Presentation -->
-    <div id="upload_presentation" class="col-xs-offset-3 col-xs-6 upload uploadDialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body">
+                <h3 id="uploadLabel">Uploading presentation...</h3>
+                <div id="progressbar"></div>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+
+<!--     <div id="upload_presentation" class="col-xs-offset-3 col-xs-6 upload uploadDialog modal-dialog">
         <div>
             <a href="#closeUpload" title="Close" class="closeUpload">X</a>
             <h3 id="uploadLabel">Uploading presentation...</h3>
             <div id="progressbar"></div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Header -->
     <header id="top" class="header">
