[refactor] Added new upload template

--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -75,7 +75,7 @@
     </nav>
 
     <!-- Upload Presentation -->
-    <div class="modal-dialog">
+    <div class="modal-dialog uploadDialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
