--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -14,6 +14,9 @@
     <meta name="author" content="WEBENTATIONS inc.">
     <link rel="canonical" href="https://www.webentations.com" />
 
+    <!-- Bootstrap Core CSS -->
+    <link href="new_template/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- Custom CSS -->
     <link href="new_template/css/stylish-portfolio.css" rel="stylesheet">
