--- a/AWS_Website/www_static/index2.html
+++ b/AWS_Website/www_static/index2.html
@@ -66,7 +66,8 @@
 
                        <li><a href="#login" class="loginUser">Sign in</a></li>
 
-            <li><a href="signup.html" class="menuLinkNoScroll">Sign up</a></li>
+            <li><!-- <a href="signup.html" class="menuLinkNoScroll">Sign up</a></li> -->
+                        <a href="#signUp" class="signUpUser">Sign up</a></li>
                     <% } else { %>
             <% if (userRole == 0) { %>
               <li><a href="/subscription.html" data-index="three" class="menuLinkNoScrollRed">Upgrade account</a></li>
@@ -257,6 +258,48 @@
                     </div> <!-- <input type="checkbox"> -->
 
                     <input type="submit" value="Sign In" class="btn btn-default"/>
+                </form>
+            </div>
+    </section>
+
+    <!-- Sign Up -->
+    <section id="signUp" class="signUp">
+        <div class="col-xs-offset-4 col-xs-4">
+
+               <div class="container-fluid">
+                <form class="m-form-signin" role="form" action="/signup.html" method="post">
+                <input type="hidden" name="redirect" value="<%= request.headers.referer %>">
+                <input type="hidden" name="account" value="<%= (request.body.account) ? request.body.account : request.query.account %>">
+                    <h1>Sign Up</h1>
+                       <%  if (error == 2) { %>
+                            <h4 style="color: #FF0000">Email <i><%= request.body.email %></i> has already registered. Please try another one.</h4>
+                       <%   } else if (error == 3) { %>
+                            <h4 style="color: #FF0000">Wrong email address</h4>
+                        <%   } else if (error == 4) { %>
+                            <h4 style="color: #FF0000">DB error. Contact us, please.</h4>
+                       <%   } else if (error == 5) { %>
+                            <h4 style="color: #FF0000">Password does not match the confirm password.</h4>
+                       <%   } else if (error ==  1) { %>
+                            <h4 style="color: #FF0000">Please fill out the registration form.</h4>
+                       <% } %>
+
+                    <h2>Create your personal account </h2>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" name="email" placeholder="Enter email" value="<%= request.body.email %>">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" name="password" placeholder="Password">
+                    </div>
+
+                    <!--div class="checkbox">
+                        <label>
+                          <input type="checkbox"> You are agreeing to the <a href="#">Terms of Service</a> and <a href="#">the&nbsp;Privacy Policy</a>.
+                        </label>
+                    </div-->
+                    <input type="submit" value="Create Account" class="btn btn-default"/>
                 </form>
             </div>
     </section>
